--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.4.2",
+    "antd": "^5.5.0",
+    "immer": "^10.0.2",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
